--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 .container {
     z-index: 1;
-    position: absolute;
+    height: 100vh;
     width: 100%;
-    height: 100%;
+    display: flex;
 }
 
 .control{
-    position: absolute;
+
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -23,15 +22,16 @@
 }
 x
 #js_timer {
-    position: absolute;
+
     z-index: 999;
     text-align: center;
     overflow: visible;
+    padding: 10em;
     
 }
 
 #timer {
-    position: absolute;
+    
     width: 10rem;
     height: 3.8rem;
     left: 75rem;
@@ -46,18 +46,25 @@ x
 
 .controle{
     z-index: 1;
-    position: absolute;
+    
     border: 5px solid black;
     background-color: white;
     top: 2rem;
     left: 11.5rem;
 }
 
+.section_controle{
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .box {
-    position: absolute ;
+   
     z-index: 1;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background-color: black;
     margin: 10px;
     color: white;
@@ -94,6 +101,7 @@ x
 
   #space h1 {
     transform: translateY(25px); /* Ajustez la valeur pour déplacer le contenu vers le bas */
+    text-align: center;
   }
 
   #arrowup{
@@ -115,3 +123,34 @@ x
     left: 18.5rem;
   }
 
+.zqsd{
+  display: flex;
+}
+
+.zqsd_z{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fleche{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fleche_cote{
+  display: flex;
+  
+}
+
+.placement_timer{
+  display: flex;
+  justify-content: center;
+  width: 33%;
+}
+
+.jeu{
+  width: 33%;
+  z-index: 8000;
+}
