--- a/Style/PA.css
+++ b/Style/PA.css
@@ -608,8 +608,8 @@ html, body {
     z-index: 4;
     max-width: 1200px;
     margin: 0 auto;
-    margin-left: -75rem; 
-    margin-top: -10rem;   
+    margin-left: -72rem;
+    margin-top: -7rem;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -702,6 +702,8 @@ html, body {
   }
 
 .Lancement {
+  margin-top: -4em;
+  margin-left: -1em;
     position: relative;
     display: inline-block;
     font-size: 35px;
